# autotrader

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cleanup.sh  config.yaml  dashboard-config.yaml  docker-compose.yml  main.py  pyproject.toml  run.py  start.ps1  start.py  start_dashboard.bat  start_dashboard.sh  status.py  test_basic.py  test_imports.py  test_main.py  test_step_by_step.py
.github/workflows/: ci.yml  test-package.yaml
.streamlit/: config.toml
backup_before_refactor/alpaca/: adapter.py  adapter_refactored.py  config.yaml
backup_before_refactor/alpaca/api/models/: account_model.py  position_model.py  quote_model.py
backup_before_refactor/alpaca/api/stock/: latest_quote.py  predictor.py
backup_before_refactor/alpaca/api/trading/: market.py  news.py  orders.py  positions.py  watchlists.py
backup_before_refactor/alpaca/api/utils/: __init__.py
data/: trading.db
docs/: BROKER_SYSTEM.md  GENERIC_BROKER_CONFIG.md  LOGGING_STANDARDS.md  MULTI_BROKER_DATABASE_ANALYSIS.md
infra/terraform/: main.tf  outputs.tf  variables.tf
scripts/: analyze_broker_duplications.py  demo_path_improvements.py  migrate_broker_architecture.py  migrate_config.py  migrate_to_multi_broker.py  run_with_uv.bat  run_with_uv.sh  setup_precommit.py  test_config_system.py  test_generic_config.py  validate_config.py
src/: __init__.py  main_automated.py
src/api/: main.py
src/api/routes/: __init__.py  brokers.py  core.py  test.py  trading.py
src/brokers/alpaca/: __init__.py  adapter.py  config.yaml
src/brokers/alpaca/api/models/: __init__.py  account_activity_model.py  asset_model.py  clock_model.py  order_model.py  watchlist_model.py
src/brokers/alpaca/api/stock/: __init__.py  assets.py  history.py  predictor.py  screener.py
src/brokers/alpaca/api/trading/: __init__.py  account.py  recommendations.py
src/brokers/alpaca/api/utils/: session.py
src/brokers/base/: __init__.py  broker_adapter.py  config.py  factory.py  interface.py
src/brokers/base/config/: base_config.yaml
src/brokers/common/: __init__.py
src/brokers/demo_broker/: __init__.py  adapter.py  config.yaml
src/core/: __init__.py  broker_manager.py  data_fetcher.py  multi_broker_manager.py  news_analyzer.py  order_executor.py  position_monitor.py  price_forecaster.py  risk_management.py  risk_manager.py  signal_aggregator.py  stock_scorer.py  stock_screener.py  strategy_engine.py  trading_orchestrator.py
src/core/trading/: engine.py  executor.py  indicators.py  portfolio.py  trade.py
src/dashboard/: main.py  manager.py
src/db/: models.py  repository.py
src/infra/: __init__.py  config.py  http_client.py  logging_config.py  model_utils.py  path_utils.py  rate_limiter.py  secrets.py
src/ml/: model_interface.py
tests/: test_broker_minimal.py  test_broker_structure.py  test_broker_structure_simple.py  test_trading.py
tests/test_http/: test_requests.py
tests/test_models/: test_account_activity_model.py  test_account_model.py  test_asset_model.py  test_clock_model.py  test_models_merged.py  test_watchlist_model.py
tests/test_stock/: test_assets.py  test_history_merged.py  test_latest_quote.py  test_predictor.py  test_screener.py
tests/test_trading/: test_account.py  test_account2.py  test_news.py  test_orders.py  test_positions.py  test_recommendations.py  test_watchlists.py  test_watchlists2.py
